[package]
name = "jsparser"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.9", features = ["json", "blocking", "rustls-tls"], default-features = false }
wasm-bindgen = "0.2.95"

[lib]
crate-type = ["cdylib"]

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
codegen-units = 1
strip = true
